piece class 추가안함

--- a/html/piece.html
+++ b/html/piece.html
@@ -200,7 +200,7 @@ h3{
     <a href=" https://namu.wiki/w/%EA%B3%B0%EB%8F%8C%EC%9D%B4%20%ED%91%B8%20%EB%8B%A4%EC%8B%9C%20%EB%A7%8C%EB%82%98%20%ED%96%89%EB%B3%B5%ED%95%B4">
     <img src="곰돌이 푸.jpeg" alt="남자안뜸" style="float: left;" width="300px" > 
     </a>
-    <a style= "font-size: larger;"> 
+    <a style= "font-size: larger;" class="x";> 
 “어른이 된 나 인생의 쉼표가 필요한 순간, 찾아온 나의 친구들 다시 만나 행복해” 어른이 된 나 로빈(이완 맥그리거)은 가족도 일도 모두 완벽해 보이지만, 한편 지쳐가는 일상 속에 서있다. 어느 날, 눈 앞에 가장 행복한 시간을 함께했던 비밀 친구 ‘곰돌이 푸와 일행’들이 다시 찾아오게 되고 뜻하지 않게 놀라운 모험 속에 빠져들게 되는데…
     </a>
   </div>
